--- a/app/src/main/res/layout/list_apointment_design.xml
+++ b/app/src/main/res/layout/list_apointment_design.xml
@@ -68,9 +68,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="17dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="18dp"
                 android:maxLines="1"
                 android:text="Temps"
                 android:textColor="@color/blue"
@@ -95,14 +95,12 @@
                 android:id="@+id/doctor_view_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="7dp"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="35dp"
                 android:maxLines="1"
-                android:text="5:00 PM"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="14sp" />
 
@@ -113,9 +111,9 @@
                 android:layout_below="@id/doctor_view_title"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:layout_marginStart="6dp"
-                android:layout_marginLeft="6dp"
-                android:layout_marginTop="21dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="6dp"
                 android:text="en cours"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -127,9 +125,9 @@
                 android:layout_below="@id/doctor_view_title"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:layout_marginStart="7dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="6dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="-16dp"
                 android:text="Type de Rendez_vous"
                 android:textColor="@color/blue"
                 android:textSize="12sp" />
