--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,19 +7,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
-    android:gravity="center"
-    android:background="@drawable/background6"
-    >
+    android:gravity="center">
 
-    <TextView
-        android:id="@+id/register_text_title"
+
+    <RelativeLayout
+        android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="110dp"
-        android:layout_marginBottom="100dp"
-        android:text="S'inscrire"
-        android:textColor="@color/black"
-        android:textSize="50dp" />
+        android:layout_height="210dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-80dp"
+        android:background="@drawable/rectangle_round"
+        android:elevation="6dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/register_text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="7dp"
+            android:text="S'inscrire"
+            android:textColor="@color/white"
+            android:textSize="40dp" />
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/linearLayoutChamps"
@@ -40,7 +56,7 @@
             android:drawableLeft="@drawable/ic_baseline_email_24"
             android:ems="10"
             android:hint="Adresse Email"
-            android:inputType="textPassword"
+            android:inputType="textEmailAddress"
             android:textSize="24sp" />
 
         <EditText
@@ -78,30 +94,30 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/register_button_inscrire"
-        android:layout_width="166dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/linearLayoutChamps"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="10dp"
-        android:backgroundTint="@color/blue"
-        android:text="S’inscrire"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/register_button_inscrire"
+            android:layout_width="166dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/linearLayoutChamps"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="10dp"
+            android:backgroundTint="@color/blue"
+            android:text="S’inscrire"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/register_button_cancel"
-        android:layout_width="166dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/linearLayoutChamps"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_toRightOf="@+id/register_button_inscrire"
-        android:backgroundTint="@color/blue"
-        android:text="Annuler"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/register_button_cancel"
+            android:layout_width="166dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/linearLayoutChamps"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_toRightOf="@+id/register_button_inscrire"
+            android:backgroundTint="@color/blue"
+            android:text="Annuler"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-</RelativeLayout>
+    </RelativeLayout>
