--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,11 +13,11 @@
     <RelativeLayout
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_height="250dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="-80dp"
+        android:layout_marginTop="-120dp"
         android:background="@drawable/rectangle_round"
         android:elevation="6dp"
         android:gravity="center"
@@ -30,8 +30,8 @@
             android:id="@+id/register_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginTop="7dp"
+            android:gravity="center"
             android:text="S'inscrire"
             android:textColor="@color/white"
             android:textSize="40dp" />
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="110dp"
         android:layout_marginBottom="70dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -53,9 +53,9 @@
             android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginTop="30dp"
-            android:drawableLeft="@drawable/ic_baseline_email_24"
+            android:drawableLeft="@drawable/ic_baseline_person_24"
             android:ems="10"
-            android:hint="Adresse Email"
+            android:hint="Nom utilisateur"
             android:inputType="textEmailAddress"
             android:textSize="24sp" />
 
@@ -94,30 +94,30 @@
 
     </LinearLayout>
 
-        <Button
-            android:id="@+id/register_button_inscrire"
-            android:layout_width="166dp"
-            android:layout_height="50dp"
-            android:layout_below="@id/linearLayoutChamps"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/blue"
-            android:text="S’inscrire"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+    <Button
+        android:id="@+id/register_button_inscrire"
+        android:layout_width="166dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/linearLayoutChamps"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/blue"
+        android:text="S’inscrire"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/register_button_cancel"
-            android:layout_width="166dp"
-            android:layout_height="50dp"
-            android:layout_below="@id/linearLayoutChamps"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="40dp"
-            android:layout_toRightOf="@+id/register_button_inscrire"
-            android:backgroundTint="@color/blue"
-            android:text="Annuler"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+    <Button
+        android:id="@+id/register_button_cancel"
+        android:layout_width="166dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/linearLayoutChamps"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_toRightOf="@+id/register_button_inscrire"
+        android:backgroundTint="@color/blue"
+        android:text="Annuler"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     </RelativeLayout>
