--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,191 +7,242 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:background="@drawable/rectangle_round"
-        android:elevation="6dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/register_text_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:gravity="center"
-            android:text="S'inscrire"
-            android:textColor="@color/white"
-            android:textSize="30dp" />
-    </RelativeLayout>
-
     <LinearLayout
-        android:id="@+id/linearLayoutChamps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/view"
-        android:layout_alignParentStart="true"
-        android:gravity="center"
         android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/register_edittext_email"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:drawableLeft="@drawable/ic_baseline_person_24"
-            android:hint="Nom utilisateur"
-            android:inputType="textEmailAddress"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/ic_baseline_email_24"
-            android:hint="E-mail"
-            android:inputType="textEmailAddress"
-            android:textSize="20sp"
+        <RelativeLayout
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:background="@drawable/rectangle_round"
+            android:elevation="6dp"
+            android:gravity="center"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/register_edittext_password"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
-            android:hint="Mot de passe"
-            android:inputType="textPassword"
-            android:textSize="20sp" />
+            <TextView
+                android:id="@+id/register_text_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:gravity="center"
+                android:text="S'inscrire"
+                android:textColor="@color/white"
+                android:textSize="30dp" />
+        </RelativeLayout>
 
-        <EditText
-            android:id="@+id/register_edittext_Confirmpassword"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
-            android:ems="10"
-            android:hint="Confirmer le mot de passe"
-            android:inputType="textPassword"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/view_dob"
-            android:layout_width="300dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/register_edittext_Confirmpassword"
-            android:layout_marginTop="20dp"
-            android:text="Date de naissance:"
-            android:textColor="@color/blue"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-
-        <Spinner
-            android:id="@+id/jours"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:layout_marginRight="100dp"
-            android:layout_below="@id/view_dob"
-            android:layout_marginTop="10dp"
-            android:entries="@array/days" />
-
-        <Spinner
-            android:id="@+id/mois"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:layout_below="@id/view_dob"
-            android:layout_marginTop="-20dp"
-            android:entries="@array/months" />
-
-        <Spinner
-            android:id="@+id/annee"
-            android:layout_width="150dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="130dp"
-            android:layout_below="@id/view_dob"
-            android:layout_marginTop="-20dp"
-            android:entries="@array/years" />
-
-        <TextView
-            android:id="@+id/view_sex"
-            android:layout_width="300dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/jours"
-            android:layout_marginTop="20dp"
-            android:text="Sexe:"
-            android:textColor="@color/blue"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <RadioGroup
-            android:id="@+id/radioSex"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayoutChamps"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/jours"
-            android:layout_marginTop="-40dp"
-            android:layout_toRightOf="@id/view_sex"
-            android:orientation="horizontal">
+            android:layout_below="@+id/view"
+            android:layout_alignParentStart="true"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/radioMale"
+            <EditText
+                android:id="@+id/register_edittext_email"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:drawableLeft="@drawable/ic_baseline_person_24"
+                android:hint="Nom utilisateur"
+                android:inputType="textEmailAddress"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:drawableLeft="@drawable/ic_baseline_email_24"
+                android:hint="E-mail"
+                android:inputType="textEmailAddress"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/firstName"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:hint="Prénom"
+                android:inputType="text"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/LastName"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:hint="Nom"
+                android:inputType="text"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/phone"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:hint="Num Tel"
+                android:inputType="text"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/address"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:hint="Adresse"
+                android:inputType="text"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/register_edittext_password"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:drawableLeft="@drawable/ic_baseline_lock_24"
+                android:hint="Mot de passe"
+                android:inputType="textPassword"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/register_edittext_Confirmpassword"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:drawableLeft="@drawable/ic_baseline_lock_24"
+                android:hint="Confirmer le mot de passe"
+                android:inputType="textPassword"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/view_dob"
+                android:layout_width="300dp"
+                android:layout_height="30dp"
+                android:layout_below="@id/register_edittext_Confirmpassword"
+                android:layout_marginTop="20dp"
+                android:text="Date de naissance:"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <Spinner
+                android:id="@+id/jours"
+                android:layout_width="100dp"
+                android:layout_height="20dp"
+                android:layout_below="@id/view_dob"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="100dp"
+                android:entries="@array/days" />
+
+            <Spinner
+                android:id="@+id/mois"
+                android:layout_width="100dp"
+                android:layout_height="20dp"
+                android:layout_below="@id/view_dob"
+                android:layout_marginTop="-20dp"
+                android:entries="@array/months" />
+
+            <Spinner
+                android:id="@+id/annee"
+                android:layout_width="150dp"
+                android:layout_height="20dp"
+                android:layout_below="@id/view_dob"
+                android:layout_marginLeft="130dp"
+                android:layout_marginTop="-20dp"
+                android:entries="@array/years" />
+
+            <TextView
+                android:id="@+id/view_sex"
+                android:layout_width="300dp"
+                android:layout_height="30dp"
+                android:layout_below="@id/jours"
+                android:layout_marginTop="20dp"
+                android:text="Sexe:"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <RadioGroup
+                android:id="@+id/radioSex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:text="Homme" />
+                android:layout_below="@id/jours"
+                android:layout_marginTop="-40dp"
+                android:layout_toRightOf="@id/view_sex"
+                android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/radioFemale"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:text="Femme" />
+                <RadioButton
+                    android:id="@+id/radioMale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="13dp"
+                    android:text="Homme" />
 
-        </RadioGroup>
+                <RadioButton
+                    android:id="@+id/radioFemale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:text="Femme" />
+
+            </RadioGroup>
 
 
-        <!--   <Button
-            android:id="@+id/register_button_inscrire"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_below="@+id/login_edittext_passwor"
-            android:layout_marginTop="60dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/blue"
-            android:text="Se connecter"
-            android:textSize="20sp"
-            android:textStyle="bold"/>  !-->
+            <!--   <Button
+                android:id="@+id/register_button_inscrire"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_below="@+id/login_edittext_passwor"
+                android:layout_marginTop="60dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:backgroundTint="@color/blue"
+                android:text="Se connecter"
+                android:textSize="20sp"
+                android:textStyle="bold"/>  !-->
 
-        <Button
-            android:id="@+id/register_button_inscrire"
-            android:layout_width="166dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="90dp"
-            android:backgroundTint="@color/blue"
-            android:text="S’inscrire"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            <Button
+                android:id="@+id/register_button_inscrire"
+                android:layout_width="166dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="90dp"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/blue"
+                android:text="S’inscrire"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/register_button_cancel"
-            android:layout_width="166dp"
-            android:layout_height="50dp"
-            android:layout_below="@id/view_sex"
-            android:layout_marginTop="-50dp"
-            android:layout_marginRight="90dp"
-            android:backgroundTint="@color/blue"
-            android:text="Annuler"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
+            <Button
+                android:id="@+id/register_button_cancel"
+                android:layout_width="166dp"
+                android:layout_height="50dp"
+                android:layout_below="@id/view_sex"
+                android:layout_marginRight="90dp"
+                android:layout_marginTop="-50dp"
+                android:backgroundTint="@color/blue"
+                android:text="Annuler"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
