--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,11 +39,11 @@
             android:layout_below="@+id/view"
             android:layout_alignParentStart="true"
             android:gravity="center"
-            android:padding="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <EditText
-                android:id="@+id/register_edittext_email"
+                android:id="@+id/username"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
@@ -144,34 +144,25 @@
                 android:textStyle="bold" />
 
 
-            <Spinner
-                android:id="@+id/jours"
-                android:layout_width="100dp"
-                android:layout_height="20dp"
-                android:layout_below="@id/view_dob"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="100dp"
-                android:entries="@array/days" />
-
-            <Spinner
-                android:id="@+id/mois"
-                android:layout_width="100dp"
-                android:layout_height="20dp"
-                android:layout_below="@id/view_dob"
-                android:layout_marginTop="-20dp"
-                android:entries="@array/months" />
-
-            <Spinner
-                android:id="@+id/annee"
-                android:layout_width="150dp"
-                android:layout_height="20dp"
-                android:layout_below="@id/view_dob"
-                android:layout_marginLeft="130dp"
-                android:layout_marginTop="-20dp"
-                android:entries="@array/years" />
 
             <TextView
-                android:id="@+id/view_sex"
+                android:id="@+id/myDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="35dp"
+                android:text="Aperçu de la date choisie ici "
+                android:textSize="18dp" />
+            <DatePicker
+                android:id="@+id/datePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner" />
+
+
+            <TextView
+                android:id="@+id/Gender"
                 android:layout_width="300dp"
                 android:layout_height="30dp"
                 android:layout_below="@id/jours"
@@ -182,7 +173,7 @@
                 android:textStyle="bold" />
 
             <RadioGroup
-                android:id="@+id/radioSex"
+                android:id="@+id/radioGender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/jours"
@@ -205,6 +196,9 @@
                     android:text="Femme" />
 
             </RadioGroup>
+
+
+
 
 
             <!--   <Button
@@ -236,8 +230,8 @@
                 android:layout_width="166dp"
                 android:layout_height="50dp"
                 android:layout_below="@id/view_sex"
-                android:layout_marginRight="90dp"
                 android:layout_marginTop="-50dp"
+                android:layout_marginRight="90dp"
                 android:backgroundTint="@color/blue"
                 android:text="Annuler"
                 android:textSize="18sp"
