--- a/app/src/main/res/layout/activity_appointment_list.xml
+++ b/app/src/main/res/layout/activity_appointment_list.xml
@@ -23,9 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="65dp"
-            android:layout_marginRight="30dp"
             android:gravity="center"
-            android:text="Bienvenue "
+            android:text="Bienvenue dans VacDz "
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="normal" />
