--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -10,11 +10,10 @@
     android:layout_marginRight="20dp">
 
 
-
     <LinearLayout
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title"
         android:orientation="vertical">
 
         <ImageView
@@ -27,10 +26,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="75dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="75dp"
             android:background="@color/blue"
             android:gravity="center"
             android:text="Editer profil"
@@ -102,86 +101,18 @@
         android:layout_toRightOf="@id/view_email"
         android:inputType="textEmailAddress" />
 
-    <TextView
-        android:id="@+id/view_dob"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view_email"
-        android:layout_marginTop="15dp"
-        android:text="Date de naissance:"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-
-    <Spinner
-        android:id="@+id/jours"
-        android:layout_width="93dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view_dob"
-        android:layout_marginTop="10dp"
-        android:entries="@array/days" />
-
-    <Spinner
-        android:id="@+id/mois"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view_dob"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/jours"
-        android:entries="@array/months" />
-
-    <Spinner
-        android:id="@+id/annee"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/view_dob"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/mois"
-        android:entries="@array/years" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sexe:"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:id="@+id/view_sex"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/jours"/>
-
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/radioSex"
-        android:orientation="horizontal"
-        android:layout_below="@id/jours"
-        android:layout_marginTop="12dp"
-        android:layout_toRightOf="@id/view_sex">
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/radioMale"
-            android:text="Homme"
-            android:layout_marginLeft="13dp"/>
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/radioFemale"
-            android:text="Femme"
-            android:layout_marginLeft="10dp" />
-
-    </RadioGroup>
 
     <Button
         android:id="@+id/save"
         android:layout_width="166dp"
         android:layout_height="50dp"
-        android:layout_below="@id/view_sex"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="4dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="150dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="314dp"
         android:backgroundTint="@color/blue"
         android:text="Enregistrer"
         android:textSize="16sp"
@@ -191,9 +122,10 @@
         android:id="@+id/editprofil_button_cancel"
         android:layout_width="166dp"
         android:layout_height="50dp"
-        android:layout_below="@id/view_sex"
-        android:layout_marginLeft="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="150dp"
+        android:layout_marginBottom="315dp"
         android:layout_toRightOf="@+id/save"
         android:backgroundTint="@color/blue"
         android:text="Annuler"
